        - New accessor/mutator 'download_entries'.
        - New method 'get_download_speed'.
        - New class-wide parameter variable 'o_download_speed_accuracy';
        - Various documentation improvements.
      - Progresses/Console:
        - Substituted obsoleted 'progress' method with new 'hook' method.
        - Fixed dangling, wrong-placed console cursor.
        - Also output download speed.
        - Output count of downloaded bytes for each package in
          human-readable form too (in addition to all size bytes count for
          package). In four words, "10829837/15.9MiB" -> '10.1MiB/15.9MiB'.
    - System:
      - Worker:
        - Honor 'cupt::worker::download-only' option.
        - Added 'debug::worker' config option to print some debug info.
        - Bump Pre-Depends requirements to 'configure' to make sure to not
          violate Debian Policy.
        - Merge all 'unpack' + 'configure' actions into 'install' action
          unconditionally.
        - Don't create fake 'remove' actions, just use existing 'install'
          ones instead. This should resolve problems with scheduling
          upgrading packages containing 'Pre-Depends'.
        - Made all inter-action relations unversioned, this should ensure that
          all 'install' -> 'remove' and 'remove' -> 'install' dependencies are
          not underestimated.
        - Ensure that download manager is destroyed before processing the
          result of downloads.
    - Config:
      - New option 'cupt::worker::download-only', defaults to false.
      - Use value of 'dir::bin::dpkg', not plain 'dpkg' to obtain
        archirecture.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Sun, 19 Apr 2009 15:16:48 +0300

cupt (0.1.0) experimental; urgency=low

  * Initial release. Dedicated to Pavel Chernyshov. Developers and advanced
    users only.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 07 Apr 2009 23:23:04 +0300